--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@ h1.title {
 
 p {
   font-size: large;
+  padding-top: 10px;
 }
 
 * {
@@ -32,19 +33,14 @@ p {
 img {
   height: 450px;
   width: auto;
-
+  border-radius: 6px;
+  box-shadow: 7px 7px;
+  color: #DEF2F1;
+  transform: scale(1.0) rotate(1deg);
+  transition-duration: .5s;
 }
 
-#tv {
-  width: auto;
-  height: 450px;
-  background: white;
-  border-radius: 0% 0% 0% 0% / 0% 0% 0% 0% ;
-  color: white;
-  box-shadow: 20px 20px rgba(0,0,0,.15);
-  transition: all .4s ease;
-}
-#tv:hover {
-  border-radius: 0% 0% 50% 50% / 0% 0% 0% 0% ;
-  box-shadow: 10px 10px rgba(0,0,0,.25);
+img:hover {
+  transform: scale(0.98) rotate(-1deg);
+  transition-duration: .5s;
 }
